--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/libnabo
-	previous = 
-	base = c053501
+	previous = c053501
+	base = 9967959
 	trim = 
 	trimbase = 
