--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/libnabo
-	previous = 
-	base = d93d9db
+	previous = d93d9db
+	base = f8216a9
 	trim = 
 	trimbase = 
