--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/libnabo
-	previous = 
-	base = f945cf3
+	previous = f945cf3
+	base = 54f5804
 	trim = 
 	trimbase = 
