--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/libnabo
-	previous = 
-	base = 14db0e5
+	previous = 14db0e5
+	base = c31566e
 	trim = 
 	trimbase = 
