--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/libnabo
-	previous = 
-	base = bdbf504
+	previous = bdbf504
+	base = 629e10d
 	trim = 
 	trimbase = 
