--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/libnabo
-	previous = 
-	base = eee991b
+	previous = eee991b
+	base = c8081b1
 	trim = 
 	trimbase = 
