--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/libnabo
-	previous = 
-	base = 42d32d7
+	previous = 42d32d7
+	base = 3759b5b
 	trim = 
 	trimbase = 
