--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/libnabo
-	previous = 
-	base = 16a96ad
+	previous = 16a96ad
+	base = 912b9cb
 	trim = 
 	trimbase = 
