--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/libnabo
-	previous = 
-	base = a358a45
+	previous = a358a45
+	base = bd2a2e3
 	trim = 
 	trimbase = 
