--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/melodic/libnabo
-	previous = 
-	base = 0478aa4
+	previous = 0478aa4
+	base = 86d27bc
 	trim = 
 	trimbase = 
