--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/melodic/libnabo
-	previous = 
-	base = 243af80
+	previous = 243af80
+	base = a61635e
 	trim = 
 	trimbase = 
