--- a/tracks.yaml
+++ b/tracks.yaml
@@ -69,9 +69,11 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
     devel_branch: master
+    last_release: master
+    last_version: 1.0.7
     name: upstream
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: null
     release_tag: :{ask}
     ros_distro: melodic
