--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/libnabo
-	previous = 
-	base = d3125a6
+	previous = d3125a6
+	base = f3aa968
 	trim = 
 	trimbase = 
