--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/libnabo
-	previous = 
-	base = 1a4fb1c
+	previous = 1a4fb1c
+	base = 781bd5f
 	trim = 
 	trimbase = 
