--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/libnabo
-	previous = 
-	base = 256a217
+	previous = 256a217
+	base = 1a15049
 	trim = 
 	trimbase = 
