--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/libnabo
-	previous = 
-	base = 792f4a4
+	previous = 792f4a4
+	base = b5b0791
 	trim = 
 	trimbase = 
