--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/libnabo
-	previous = 
-	base = dc54659
+	previous = dc54659
+	base = 84843ca
 	trim = 
 	trimbase = 
