--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/libnabo
-	previous = 
-	base = 5a27088
+	previous = 5a27088
+	base = 1d1c302
 	trim = 
 	trimbase = 
