--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/libnabo
-	previous = 
-	base = f8f158a
+	previous = f8f158a
+	base = 4520168
 	trim = 
 	trimbase = 
