--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/libnabo
-	previous = 
-	base = 63cb39b
+	previous = 63cb39b
+	base = d6f1f92
 	trim = 
 	trimbase = 
