--- a/tracks.yaml
+++ b/tracks.yaml
@@ -102,7 +102,8 @@ tracks:
     patches: null
     release_inc: '3'
     release_repo_url: null
-    release_tag: :{ask}
+    release_tag: master
+    release_tag_saved: :{ask}
     ros_distro: iron
     vcs_type: git
     vcs_uri: https://github.com/ethz-asl/libnabo.git
