Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.7-3": ["Tue Mar 21 2023", "St\u00e9phane Magnenat", "stephane.magnenat@mavt.ethz.ch"]}
+{"1.0.7-4": ["Thu Apr 20 2023", "St\u00e9phane Magnenat", "stephane.magnenat@mavt.ethz.ch"], "1.0.7-3": ["Tue Mar 21 2023", "St\u00e9phane Magnenat", "stephane.magnenat@mavt.ethz.ch"]}
