--- a/tracks.yaml
+++ b/tracks.yaml
@@ -107,8 +107,7 @@ tracks:
     ros_distro: iron
     vcs_type: git
     vcs_uri: https://github.com/ethz-asl/libnabo.git
-    version: 1.0.7
-    version_saved: :{auto}
+    version: :{auto}
   melodic:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
