Update rolling track to release the same version as the source distribution.

--- a/tracks.yaml
+++ b/tracks.yaml
@@ -187,4 +187,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ethz-asl/libnabo.git
-    version: :{auto}
+    version: 1.0.7
+    version_saved: :{auto}
