--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/libnabo
-	previous = 
-	base = a95c60a
+	previous = a95c60a
+	base = 9b59165
 	trim = 
 	trimbase = 
