--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/libnabo
-	previous = 
-	base = b12866a
+	previous = b12866a
+	base = f0b3c64
 	trim = 
 	trimbase = 
