--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/libnabo
-	previous = 
-	base = 7448f69
+	previous = 7448f69
+	base = 4fae7f0
 	trim = 
 	trimbase = 
