--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/libnabo
-	previous = 
-	base = a95c60a
+	previous = a95c60a
+	base = 6af5a7c
 	trim = 
 	trimbase = 
