--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/libnabo
-	previous = 
-	base = 787c330
+	previous = 787c330
+	base = 60f2fb4
 	trim = 
 	trimbase = 
