--- a/tracks.yaml
+++ b/tracks.yaml
@@ -188,5 +188,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ethz-asl/libnabo.git
-    version: 1.0.7
-    version_saved: :{auto}
+    version: :{auto}
