--- a/tracks.yaml
+++ b/tracks.yaml
@@ -183,8 +183,7 @@ tracks:
     patches: null
     release_inc: '4'
     release_repo_url: null
-    release_tag: master
-    release_tag_saved: :{ask}
+    release_tag: :{ask}
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ethz-asl/libnabo.git
