--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.7-4": ["Wed Mar 06 2024", "St\u00e9phane Magnenat", "stephane.magnenat@mavt.ethz.ch"]}
+{"1.1.1-1": ["Fri Mar 22 2024", "St\u00e9phane Magnenat", "stephane.magnenat@mavt.ethz.ch"], "1.0.7-4": ["Wed Mar 06 2024", "St\u00e9phane Magnenat", "stephane.magnenat@mavt.ethz.ch"]}
