--- a/tracks.yaml
+++ b/tracks.yaml
@@ -133,7 +133,8 @@ tracks:
     ros_distro: jazzy
     vcs_type: git
     vcs_uri: https://github.com/norlab-ulaval/libnabo.git
-    version: :{auto}
+    version: 1.1.1
+    version_saved: :{auto}
   melodic:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
