Restore saved version and tag for jazzy track.

--- a/tracks.yaml
+++ b/tracks.yaml
@@ -129,8 +129,7 @@ tracks:
     patches: null
     release_inc: '2'
     release_repo_url: null
-    release_tag: master
-    release_tag_saved: :{ask}
+    release_tag: :{ask}
     ros_distro: jazzy
     vcs_type: git
     vcs_uri: https://github.com/norlab-ulaval/libnabo.git
