Update kilted track to release exactly last-released tag.

--- a/tracks.yaml
+++ b/tracks.yaml
@@ -156,7 +156,8 @@ tracks:
     patches: null
     release_inc: '1'
     release_repo_url: null
-    release_tag: :{ask}
+    release_tag: :{version}
+    release_tag_saved: :{ask}
     ros_distro: kilted
     vcs_type: git
     vcs_uri: https://github.com/norlab-ulaval/libnabo.git
