--- a/build_system/utilities/norlab-build-system/build_system_templates/docker-compose.project_core.yaml
+++ b/build_system/utilities/norlab-build-system/build_system_templates/docker-compose.project_core.yaml
@@ -11,7 +11,7 @@ services:
       context: ..
       # (Priority) ToDo: change path to dockerfile
       dockerfile: ${NBS_SUPERPROJECT_BUILD_SYSTEM_DIR:?err}/nbs_container/project-core/Dockerfile.project.ci_PR
-      no_cache: false
+      no_cache: true
       args:
         PROJECT_HUB: ${NBS_DOCKERHUB_NAMESPACE}
         BASE_IMAGE: ${NBS_REPOSITORY_NAME}-dependencies
@@ -30,41 +30,36 @@ services:
     build:
       platforms:
         - "linux/amd64"
-    depends_on:
-      - ci_PR
-  ci_PR_arm64:
+  ci_PR_arm64v8:
     extends: ci_PR
     build:
       platforms:
         - "linux/arm64"
-    depends_on:
-      - ci_PR
 
-  # ====Dockerhub release image====================================================================
-  release:
-    image: ${NBS_DOCKERHUB_NAMESPACE:?err}/${NBS_REPOSITORY_NAME}:${NBS_IMAGE_TAG:?err}
-    pull_policy: build
-    container_name: ${NBS_REPOSITORY_NAME}
-    build:
-      context: ..
-      # (Priority) ToDo: change path to dockerfile
-      dockerfile: ${NBS_SUPERPROJECT_BUILD_SYSTEM_DIR:?err}/nbs_container/project-core/Dockerfile.project.hub_release
-      platforms:
-        - "linux/amd64"
-        - "linux/arm64"
-      no_cache: false
-      args:
-        PROJECT_HUB: ${NBS_DOCKERHUB_NAMESPACE}
-        BASE_IMAGE: ${NBS_REPOSITORY_NAME}-dependencies
-        BASE_IMAGE_TAG: ${NBS_IMAGE_TAG}
-        IS_TEAMCITY_RUN: ${IS_TEAMCITY_RUN}
-        REPOSITORY_VERSION: ${REPOSITORY_VERSION:?err}
-        CMAKE_BUILD_TYPE: 'Release'
-        INSTALL_SCRIPT_FLAG: '--compile-test --generate-doc'
-    tty: true
-    stdin_open: true
-    init: true  # Propagate exit code (See remark in task NMO-266)
-    depends_on:
-      - dependencies
+#  # ====Dockerhub release image====================================================================
+#  release:
+#    image: ${NBS_DOCKERHUB_NAMESPACE:?err}/${NBS_REPOSITORY_NAME}:${NBS_IMAGE_TAG:?err}
+#    container_name: ${NBS_REPOSITORY_NAME}
+#    build:
+#      context: ..
+#      # (Priority) ToDo: change path to dockerfile
+#      dockerfile: ${NBS_SUPERPROJECT_BUILD_SYSTEM_DIR:?err}/nbs_container/project-core/Dockerfile.project.hub_release
+#      platforms:
+#        - "linux/amd64"
+#        - "linux/arm64/v8"
+#      no_cache: true
+#      args:
+#        PROJECT_HUB: ${NBS_DOCKERHUB_NAMESPACE}
+#        BASE_IMAGE: ${NBS_REPOSITORY_NAME}-dependencies
+#        BASE_IMAGE_TAG: ${NBS_IMAGE_TAG}
+#        IS_TEAMCITY_RUN: ${IS_TEAMCITY_RUN}
+#        REPOSITORY_VERSION: ${REPOSITORY_VERSION:?err}
+#        CMAKE_BUILD_TYPE: 'Release'
+##        INSTALL_SCRIPT_FLAG: '--compile-test --generate-doc'
+#    tty: true
+#    stdin_open: true
+#    init: true  # Propagate exit code (See remark in task NMO-266)
+#    depends_on:
+#      - dependencies
 
 
