--- a/tracks.yaml
+++ b/tracks.yaml
@@ -156,8 +156,7 @@ tracks:
     patches: null
     release_inc: '2'
     release_repo_url: null
-    release_tag: :{version}
-    release_tag_saved: :{ask}
+    release_tag: :{ask}
     ros_distro: kilted
     vcs_type: git
     vcs_uri: https://github.com/norlab-ulaval/libnabo.git
